revert font-size to fix the list font too small issue

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -339,7 +339,7 @@ li {
 }
 
 .field-value {
-    font-size: .10em;
+    font-size: .9em;
 }
 
 .footer {
